--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,32 @@
   margin: 0;
 }
 .App {
-  /* text-align: center; */
+  text-align: center;
   font-family: "Nunito", sans-serif;
+  margin: 3rem auto 0;
+  max-width: 600px;
+  padding: 0 15px;
+}
+h1 {
+  margin-bottom: 0.67em;
+}
+h3 {
+  font-size: 1.17em;
+  margin-bottom: 1em;
+}
+ul {
+  margin-bottom: 1em;
+}
+.App__itemAdder {
+  color: #fff;
+  background-color: #00a8ff;
+  font-size: 1.2em;
+  height: 50px;
+  width: 100%;
+  cursor: pointer;
+  transition: padding 0.2s;
+  display: block;
+}
+.App__itemAdder:hover {
+  padding: 0 5px;
 }
